# python-workspace

./: .gitignore  README.md  pyproject.toml  python-workspace.code-workspace  run-cmd.md  update_user_repos.py
common/: README.md  pyproject.toml
common/src/common/: __init__.py  config.py  errors.py  logger.py  redis.py  responses.py  security.py
common/src/common/database/: __init__.py  mixins.py  session.py
docs/: api-reference.md  architecture.md  demo-accounts.md  register-login.md
gateway/: .env.example  pyproject.toml
gateway/src/gateway/: config.py  main.py  server.py
gateway/src/gateway/api/v1/: auth.py  proxy.py
gateway/src/gateway/core/: auth.py  circuit_breaker.py  permissions.py  proxy.py  rate_limit.py  routes.py
scratch/: verify_gateway_tenants.py  verify_tenant_admin.py  verify_tenants.py
scripts/: seed_demo_data.py  seed_rbac.py
services/auth_service/: .env.example  README.md  alembic.ini  pyproject.toml
services/auth_service/alembic/: env.py
services/auth_service/alembic/versions/: 0001_create_user_auths_table.py
services/auth_service/src/auth_service/: config.py  main.py  server.py
services/auth_service/src/auth_service/api/: deps.py
services/auth_service/src/auth_service/api/v1/: auth.py  schemas.py
services/auth_service/src/auth_service/application/: commands.py  idempotency.py  login_limiter.py  refresh_tokens.py  services.py  unit_of_work.py  user_profiles.py
services/auth_service/src/auth_service/domain/: errors.py  models.py  repositories.py
services/auth_service/src/auth_service/infrastructure/: http_user_profiles.py
services/auth_service/src/auth_service/infrastructure/cache/: login_limiter.py  refresh_tokens.py
services/auth_service/src/auth_service/infrastructure/db/: models.py  repositories.py  unit_of_work.py
tests/: test_auth_config.py  test_auth_service.py  test_common.py  test_departments.py  test_gateway_auth.py  test_gateway_config.py  test_rbac.py  test_service_models.py  test_user_application.py  test_user_config.py  (+1 more)
(+44 files in other folders)
