[project]
name = "python-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []


[tool.uv.workspace]
members = ["common","gateway","services/*"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "uvicorn[standard]>=0.44.0"
]
