[project]
name = "common"
version = "0.1.0"
description = "Shared infrastructure helpers for workspace services"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "pyjwt>=2.10.1",
    "pydantic-settings>=2.14.0",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
