[project]
name = "auth-service"
version = "0.1.0"
description = "User authentication service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.0",
    "common",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "sqlalchemy>=2.0.49",
]

[tool.uv.sources]
common = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
